--- a/网页设计.md
+++ b/网页设计.md
@@ -51,3 +51,11 @@ PS：
 2.ID是一个标签，用于区分不同的结构和内容，就象名字，如果一个屋子有2个人同名，就会出现混淆；class是一个样式，可以套在任何结构和内容上，就象一件衣服；
 
 从概念上说就是不一样的：id是先找到结构/内容，再给它定义样式；class是先定义好一种样式，再套给多个结构/内容。
+
+# 布局 col
+
+![image](https://user-images.githubusercontent.com/117897416/222446623-eff2f6d5-bcf0-4f3d-89cd-868431920b86.png)
+
+https://www.bootstrap.cn/article/list/4.html
+
+
