--- a/网页设计小知识.md
+++ b/网页设计小知识.md
@@ -62,10 +62,7 @@ https://www.bootstrap.cn/article/list/4.html
 
 https://stackoverflow.com/questions/11510502/understanding-the-runat-server-attribute
 
-在一般情况下，不要将服务器控件移到
-
-    <form runat=server></form>
-的标记之外
+在一般情况下，不要将服务器控件移到 \<form runat=server></form>\ 的标记之外
 
 个人理解是这个标签让网页在服务器上运行了,如果不带,网页就没办法运行.因为找不到路径.
 
