--- a/网页设计小知识.md
+++ b/网页设计小知识.md
@@ -64,6 +64,11 @@ https://stackoverflow.com/questions/11510502/understanding-the-runat-server-attr
 
 在一般情况下，不要将服务器控件移到 \<form runat=server></form> 的标记之外
 
-个人理解是这个标签让网页在服务器上运行了,如果不带,网页就没办法运行.因为找不到路径.
+个人理解是这个标签让网页在服务器上或者客户端脚本上(.Master)运行了,如果不带,网页就没办法运行.因为找不到路径.
 
+## Form中runat="server"属性的意义
+
+运行编译aspx文件时，无runat server属性的标签直接写入Response；有runat server属性的标签，将被转换为HtmlContrl控件加入到ASP.NET自带的控件集合中。
+
+用法区别：一个最直接的表现就是,当你写一个id="abc"的div,如果有runat server属性,在你的aspx.cs文件中直接可以使用abc.XXX来操作这个对象,而没有runat server的话,在cs中是没有这个对象的。以上说的是asp.net中的html控件,asp控件只能runat server,因为他们不是直接和html对应的。
 
