--- a/网页设计小知识.md
+++ b/网页设计小知识.md
@@ -66,7 +66,7 @@ https://stackoverflow.com/questions/11510502/understanding-the-runat-server-attr
 
 个人理解是这个标签让网页在服务器上或者客户端脚本上(.Master)运行了,如果不带,网页就没办法运行.因为找不到路径.
 
-## Form中runat="server"属性的意义
+### Form中runat="server"属性的意义
 
 运行编译aspx文件时，无runat server属性的标签直接写入Response；有runat server属性的标签，将被转换为HtmlContrl控件加入到ASP.NET自带的控件集合中。
 
