--- a/网页设计小知识.md
+++ b/网页设计小知识.md
@@ -72,3 +72,16 @@ https://stackoverflow.com/questions/11510502/understanding-the-runat-server-attr
 
 用法区别：一个最直接的表现就是,当你写一个id="abc"的div,如果有runat server属性,在你的aspx.cs文件中直接可以使用abc.XXX来操作这个对象,而没有runat server的话,在cs中是没有这个对象的。以上说的是asp.net中的html控件,asp控件只能runat server,因为他们不是直接和html对应的。
 
+# C# string.Format
+
+https://learn.microsoft.com/en-us/dotnet/api/system.string.format?view=net-7.0
+
+理解: 第一个参数为string类型,后面的参数用来填第一个参数的:{{0}{1}{2}{3}{4}}.
+      根据指定的格式将对象的值转换为字符串，并将其插入到另一个字符串中。
+      输出一个string字符串.
+
+    Decimal pricePerOunce = 17.36m;
+    String s = String.Format("The current price is {0} per ounce.",
+                             pricePerOunce);
+    Console.WriteLine(s);
+    // Result: The current price is 17.36 per ounce.
