--- a/网页设计小知识.md
+++ b/网页设计小知识.md
@@ -92,4 +92,13 @@ https://learn.microsoft.com/en-us/dotnet/api/system.string.format?view=net-7.0
 
     <h4 class="text-center" style="color:firebrick">商品列表</h4>
     
+# DataBlind()
+
+Binds a data source to the invoked server control and all its child controls.将数据源绑定到调用的服务器控件及其所有子控件。
+
+DataBind(Boolean)	
+
+Binds a data source to the invoked server control and all its child controls with an option to raise the DataBinding event.将数据源绑定到调用的服务器控件及其所有子控件，并提供引发 DataBinding 事件的选项。
+
+
  
